troubleshooting plot-widget links

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,10 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "\n",
     "def plot_activity(data_dict, times, condition, elec):\n",
     "    '''\n",
     "    Plot the activity for the selected electrode(s)\n",
@@ -114,20 +125,22 @@
     "        elec [int] : selected electrode \n",
     "        \n",
     "    '''\n",
-    "    if elec > data_dict[condition].shape[0]:\n",
-    "        data = np.zeros((data_dict[condition].shape[1],))\n",
-    "    else:\n",
-    "        data = data_dict[condition][elec,:].ravel()\n",
+    "    data = times#data_dict[condition][elec,:].mean()\n",
+    "    fig = plt.figure()\n",
     "    plt.plot(times, data)\n",
     "    plt.axvline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.axhline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.xlabel('Time (s)')\n",
-    "    plt.ylabel('Z-scored HG')\n"
+    "    plt.ylabel('Z-scored HG')\n",
+    "    \n",
+    "    return fig\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,19 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "anatomical_areas = [area[0] for area in np.unique(elecs['anatomy'][:,3])]\n",
     "#                      selected_anatomy = anatomical_areas,\n",
     "\n",
-    "def select_parameters(selected_elec = elecs['eleclabels'][:,0], \n",
+    "def select_parameters(#selected_elec = elecs['eleclabels'][:,0], \n",
     "                      selected_type = ['raw','not raw'],\n",
     "                      selected_stimulus = [k for k in data_dict.keys()],\n",
     "                      selected_time = (0, 10, 10000)):\n",
-    "    elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
-    "    fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected)\n",
+    "#     elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
+    "#     fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected)\n",
     "    return\n",
     "\n",
     "    \n",
@@ -173,7 +186,7 @@
     "def on_value_change(change):\n",
     "    with output_elec_select:\n",
     "        elecs_scatter.selected = [i for i in change['new']]\n",
-    "        fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected[0])\n",
+    "        fig = plot_activity(data_dict, times, w.children[1].value, elec = elecs_scatter.selected)    \n",
     "    return\n",
     "\n",
     "elec_select.observe(on_value_change, names='value')"
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ca6f06ea1e147849681d6132431a234",
+       "model_id": "60a14cd60fa04fec867fcbdd27345096",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f77225bdd9b499a9cb6b21cee0e18b9",
+       "model_id": "fba6370d8e514b4cb23b92306f749d7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +248,9 @@
     "\n",
     "def on_lasso_choice(*_):\n",
     "    elec_select.value =  tuple(elecs_scatter.selected[0]);\n",
-    "    \n",
+    "#     line.set_ydata(np.zeros(data_dict['CV_listen'].shape[1],))\n",
+    "#     plt.show()\n",
+    "\n",
     "    \n",
     "elecs_scatter.observe(on_lasso_choice,'selected')\n",
     "\n",
@@ -254,18 +269,21 @@
     "\n",
     "\n",
     "\n",
-    "grid = GridspecLayout(15, 2)\n",
+    "grid = GridspecLayout(15, 3)\n",
     "grid[:, 0] = ipf\n",
     "grid[0, 1] = elec_select\n",
-    "# grid[1, 1] = size_selected\n",
-    "# grid[2, 1] = color\n",
-    "# grid[3, 1] = color_selected\n",
-    "grid[1:, 1] = w\n",
-    "# grid[4, 1] = fig\n",
-    "\n",
+    "grid[1:4, 1] = w\n",
+    "# grid[5,1] = fig\n",
     "grid\n",
     "# ipv.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
