Lasso selection now updates the plot

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,15 +116,16 @@
     "        data = data_dict[condition][elec,:].mean(0)\n",
     "        data_std = data_dict[condition][elec,:].std(0)/np.sqrt(len(elec))\n",
     "    else:\n",
-    "        data = data_dict[condition][elec,:]\n",
+    "        data = data_dict[condition][elec,:].ravel()\n",
     "        data_std = np.zeros((data.shape))\n",
     "    fig = plt.figure()\n",
     "    plt.plot(times, data)\n",
     "    plt.fill_between(times, data-data_std, data+data_std, alpha=0.5)\n",
     "    plt.axvline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.axhline(color='k', linestyle='--', linewidth=1)\n",
-    "    plt.xlabel('Time (s)')\n",
-    "    plt.ylabel('Z-scored HG')\n",
+    "    plt.xlabel('Time (s)',fontsize=14)\n",
+    "    plt.ylabel('Z-scored HG',fontsize=14)\n",
+    "    plt.gca().tick_params(axis='both', labelsize=12)\n",
     "\n",
     "#fig_out = widgets.Output(layout=Layout(height='300px', width = '300px', border='solid'))\n",
     "\n",
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +154,9 @@
     "w = interactive(select_parameters)\n",
     "\n",
     "elec_select = widgets.SelectMultiple(\n",
-    "   #options= {a[0]:i for i, a in enumerate(list(elecs['eleclabels'][:,0]))},\n",
     "   options = {a[0][0]+'-'+a[1][0]: i for i, a in enumerate(zip(elecs['anatomy'][:,0], elecs['anatomy'][:,3]))},\n",
     "   value= [1],\n",
-    "   #rows=10,\n",
+    "   rows=10,\n",
     "   description='Electrode(s)',\n",
     "   disabled=False\n",
     ")\n",
@@ -166,12 +166,10 @@
     "def on_value_change(change):\n",
     "    with output_elec_select:\n",
     "        elecs_scatter.selected = [i for i in change['new']]\n",
-    "        #plot_activity(data_dict, times, w.children[0].value, elec = elecs_scatter.selected)\n",
-    "        \n",
-    "    #with fig_out:\n",
-    "        #print(w.children[0].value)\n",
-    "    #    clear_output()\n",
-    "    #    plot_activity(data_dict, times, w.children[0].value, elec = elecs_scatter.selected)\n",
+    "    \n",
+    "    # This will update the plot by calling the select_parameters widget\n",
+    "    # and making sure it knows what is going on :)\n",
+    "    w.update()\n",
     "    return\n",
     "\n",
     "elec_select.observe(on_value_change, names='value')"
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 161,
    "metadata": {
     "scrolled": false
    },
@@ -187,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48f0ecd29e4d4e0a8f82dee3bad577a2",
+       "model_id": "3a268af5e85e4fda9e85128a7ad5d2ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6ae0242773f48e99717e626d2d53774",
+       "model_id": "26f0f6ce22bb4940bfa56a7bc906e719",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,11 +229,12 @@
     "                            color='coral', size_selected = 3.0)\n",
     "\n",
     "def on_lasso_choice(*_):\n",
+    "    '''\n",
+    "    When the user selects electrodes using the lasso tool, update the\n",
+    "    multiple select list to show the new selected electrodes.\n",
+    "    '''\n",
     "    elec_select.value =  tuple(elecs_scatter.selected[0]);\n",
-    "    w.children[0].value = w.children[0].value\n",
-    "#     line.set_ydata(np.zeros(data_dict['CV_listen'].shape[1],))\n",
-    "#     plt.show()\n",
-    "\n",
+    "    \n",
     "    \n",
     "elecs_scatter.observe(on_lasso_choice,'selected')\n",
     "\n",
@@ -249,20 +248,22 @@
     "jslink((elecs_scatter, 'size_selected'), (size_selected, 'value'))\n",
     "jslink((elecs_scatter, 'color'), (color, 'value'))\n",
     "jslink((elecs_scatter, 'color_selected'), (color_selected, 'value'))\n",
-    "# jslink((elecs_scatter, 'selected'),(elec_select, 'index'))\n",
-    "#VBox([ipv.gcc(), size, size_selected, color, color_selected])\n",
-    "\n",
-    "\n",
     "\n",
     "grid = GridspecLayout(8, 3)\n",
     "grid[:, 0] = ipf\n",
     "grid[0, 1] = elec_select\n",
     "grid[1:, 1] = w\n",
-    "#grid[2:,1] = fig_out\n",
     "\n",
     "grid\n",
     "# ipv.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
