Fixed data path

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -59,7 +59,7 @@
     "## FETCH DATA\n",
     "\n",
     "# Where is the data located?\n",
-    "local_path = '../shablona/data'\n",
+    "local_path = '../data'\n",
     "# local_path = '/Applications/freesurfer_v5/subjects/'\n",
     "subj_path = local_path+'/test_subj'\n",
     "\n",
