added voila to requirements

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -13,12 +13,12 @@
    "source": [
     "This is an interactive tool for visualizing time series data from an ECoG experiment. You can do the following:\n",
     "* Select electrodes with the menu list or mouse selection tool (use ctrl-L or ctrl-C and keep ctrl pressed, then use the mouse)\n",
-    "* Change the size and color of selected and unselected electrodes"
+    "* Change the condition plotted (listening vs. speaking)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,7 @@
     "    plt.xlabel('Time (s)',fontsize=14)\n",
     "    plt.ylabel('Z-scored HG',fontsize=14)\n",
     "    plt.gca().tick_params(axis='both', labelsize=12)\n",
+    "    #plt.ylim([-0.3, 1.5])\n",
     "\n",
     "#fig_out = widgets.Output(layout=Layout(height='300px', width = '300px', border='solid'))\n",
     "\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -185,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a268af5e85e4fda9e85128a7ad5d2ca",
+       "model_id": "6c12918c38a44fb59c57d4a2749873c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26f0f6ce22bb4940bfa56a7bc906e719",
+       "model_id": "50c280612c834da8b6e2953fbece5277",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,8 +255,7 @@
     "grid[0, 1] = elec_select\n",
     "grid[1:, 1] = w\n",
     "\n",
-    "grid\n",
-    "# ipv.show()\n"
+    "grid"
    ]
   },
   {
