Fixed ylims for plot and added grid lines

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +125,10 @@
     "    plt.axhline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.xlabel('Time (s)',fontsize=14)\n",
     "    plt.ylabel('Z-scored HG',fontsize=14)\n",
+    "    \n",
     "    plt.gca().tick_params(axis='both', labelsize=12)\n",
-    "    #plt.ylim([-0.3, 1.5])\n",
+    "    plt.grid('on')\n",
+    "    plt.ylim([-0.5, 1.5])\n",
     "\n",
     "#fig_out = widgets.Output(layout=Layout(height='300px', width = '300px', border='solid'))\n",
     "\n",
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,6 +173,7 @@
     "    # This will update the plot by calling the select_parameters widget\n",
     "    # and making sure it knows what is going on :)\n",
     "    w.update()\n",
+    "    \n",
     "    return\n",
     "\n",
     "elec_select.observe(on_value_change, names='value')"
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -186,7 +189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c12918c38a44fb59c57d4a2749873c3",
+       "model_id": "862b6cc3a14b4ba3991e03ef16582e24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50c280612c834da8b6e2953fbece5277",
+       "model_id": "65d0aa76e9394802aa23b1c665265d24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,13 +260,6 @@
     "\n",
     "grid"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
