Added data credit

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "This is an interactive tool for visualizing time series data from an ECoG experiment. You can do the following:\n",
     "* Select electrodes with the menu list or mouse selection tool (use ctrl-L or ctrl-C and keep ctrl pressed, then use the mouse)\n",
-    "* Change the condition plotted (listening vs. speaking)"
+    "* Change the condition plotted (listening vs. speaking)\n",
+    "\n",
+    "Data is from Hamilton et al. 2017. https://zenodo.org/record/996814"
    ]
   },
   {
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "862b6cc3a14b4ba3991e03ef16582e24",
+       "model_id": "84b62dd2d60a453a89caa4b3ac07c6c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65d0aa76e9394802aa23b1c665265d24",
+       "model_id": "e86c29d78a58457f8ed02da663316fcf",
        "version_major": 2,
        "version_minor": 0
       },
